Source/WebKit/WebProcess/GPU/graphics/RemoteGraphicsContextGLProxy.h
@@ -64,7 +64,6 @@ public:
     void notifyMarkContextChanged() final;
     void simulateContextChanged() final;
     void paintRenderingResultsToCanvas(WebCore::ImageBuffer*) final;
-    RefPtr<WebCore::ImageData> paintRenderingResultsToImageData() final;
     void paintCompositedResultsToCanvas(WebCore::ImageBuffer*) final;
     void synthesizeGLError(GCGLenum error) final;
     GCGLenum getError() final;
@@ -321,6 +320,7 @@ public:
     void multiDrawArraysInstancedANGLE(GCGLenum mode, GCGLSpan<const GCGLint> firsts, GCGLSpan<const GCGLsizei> counts, GCGLSpan<const GCGLsizei> instanceCounts, GCGLsizei drawcount) final;
     void multiDrawElementsANGLE(GCGLenum mode, GCGLSpan<const GCGLsizei> counts, GCGLenum type, GCGLSpan<const GCGLint> offsets, GCGLsizei drawcount) final;
     void multiDrawElementsInstancedANGLE(GCGLenum mode, GCGLSpan<const GCGLsizei> counts, GCGLenum type, GCGLSpan<const GCGLint> offsets, GCGLSpan<const GCGLsizei> instanceCounts, GCGLsizei drawcount) final;
+    RefPtr<WebCore::ImageData> paintRenderingResultsToImageData() final;
     // End of list used by generate-gpup-webgl script.
 
 protected:
