Source/WebKit/Scripts/webkit/messages_unittest.py
@@ -39,7 +39,14 @@ tests_directory = os.path.join(module_directory, 'tests')
 
 reset_results = False
 
-_test_receiver_names = ['TestWithSuperclass', 'TestWithLegacyReceiver', 'TestWithoutAttributes', 'TestWithIfMessage', 'TestWithSemaphore']
+_test_receiver_names = [
+    'TestWithSuperclass',
+    'TestWithLegacyReceiver',
+    'TestWithoutAttributes',
+    'TestWithIfMessage',
+    'TestWithSemaphore',
+    'TestWithImageData',
+]
 
 
 def receiver_header_file_name(receiver_name):
